--- a/my-coffee-venture/src/app/home/home.component.html
+++ b/my-coffee-venture/src/app/home/home.component.html
@@ -15,7 +15,7 @@
                     <li class="header__navbar-item ">Ket noi</li>
                 </ul>
                 <ul class="header__navbar-list">
-                    <li class="header__navbar-item">
+                    <li class="header__navbar-item header__navbar-item--has-notify">
                         Thong bao
                         <div class="header__notify">
                             <header class="header__notify-header">
