--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
@@ -6,7 +6,7 @@
     margin: 0 auto;">
                 <div style="color: whitesmoke;    font-size: 3.2rem;
     line-height: 4.6rem;
-    font-weight: 700;">Hi there</div>
+    font-weight: 700;">Anh iu em Le Thi Thu Giang</div>
                 <div style="color: whitesmoke; font-size: 3.2rem;
     line-height: 4.6rem;
     font-weight: 700;">Hi hi</div>
