--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.css
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.css
@@ -101,11 +101,36 @@ nav .navbar-brand {
     color: #000;
 }
 
-section {
-    height: calc(90% - 50px);
-    height: 90vh;
-}
+
+/* section {
+    min-height: 100vh;
+} */
 
 p-card {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.p-carousel .p-carousel-content .p-carousel-prev,
+.p-carousel .p-carousel-content .p-carousel-next {
+    display: none !important;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.bg_carousel {
+    background-size: cover;
+    background-color: #232f3e;
+}
+
+.bg_carousel-header {
+    margin-top: 2rem;
+    color: white;
+    padding-bottom: 2rem;
+    padding-left: 3.2rem;
+    padding-right: 2rem;
 }
