--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
@@ -113,6 +113,89 @@
     </div>
 </section>
 <section>
+    <div class="container">
+        <h2>Vertical Nav</h2>
+        <p>Use the .flex-column class to create a vertical nav:</p>
+        <div class="row">
+            <div class="col-lg-3" style="padding-top: 0.5rem;">
+                <ul class="nav flex-column sticky-top" style="top: 4rem;">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-9">
+                <div class="row">
+                    <div class="col-md-4" style="padding: 20px;">
+                        <div class="hi">
+                            <p-card header="Every good coffee house have good reviews" subheader="" styleClass="p-card-shadow ">
+                                <ng-template pTemplate="header ">
+                                    <img alt="Card " src="https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb ">
+                                </ng-template>
+                                <p style="height: 20vh">See our list of reviews now!
+                                </p>
+                                <ng-template pTemplate="footer ">
+                                    <div>
+                                        <a routerLink="/reviewer">See reviews <i class="pi pi-arrow-right transform"
+                                                style="font-size: 0.5rem"></i></a>
+                                    </div>
+                                </ng-template>
+                            </p-card>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="padding: 20px;">
+                        <div class="hi">
+                            <p-card header="Every good coffee house have good reviews" subheader="" styleClass="p-card-shadow ">
+                                <ng-template pTemplate="header ">
+                                    <img alt="Card " src="https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb ">
+                                </ng-template>
+                                <p style="height: 20vh">See our list of reviews now!
+                                </p>
+                                <ng-template pTemplate="footer ">
+                                    <div>
+                                        <a routerLink="/reviewer">See reviews <i class="pi pi-arrow-right transform"
+                                                style="font-size: 0.5rem"></i></a>
+                                    </div>
+                                </ng-template>
+                            </p-card>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="padding: 20px;">
+                        <div class="hi">
+                            <p-card header="Every good coffee house have good reviews" subheader="" styleClass="p-card-shadow ">
+                                <ng-template pTemplate="header ">
+                                    <img alt="Card " src="https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb ">
+                                </ng-template>
+                                <p style="height: 20vh">See our list of reviews now!
+                                </p>
+                                <ng-template pTemplate="footer ">
+                                    <div>
+                                        <a routerLink="/reviewer">See reviews <i class="pi pi-arrow-right transform"
+                                                style="font-size: 0.5rem"></i></a>
+                                    </div>
+                                </ng-template>
+                            </p-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+<section>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</section>
+<!-- <section>
     <header>
         <h1 style="text-align: center; margin-top:0.5rem;">Highlighted journal</h1>
     </header>
@@ -133,4 +216,4 @@
             </ngb-carousel>
         </div>
     </div>
-</section>
+</section> -->
