--- a/my-coffee-venture/src/app/app.component.html
+++ b/my-coffee-venture/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-base></app-base>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
+<app-base-footer></app-base-footer>
