--- a/my-coffee-venture/src/app/view/base/base.component.html
+++ b/my-coffee-venture/src/app/view/base/base.component.html
@@ -1,7 +1,7 @@
-<div id="nav" class="navbar fixed-top navbar-expand-sm" [ngClass]="{'affix': id ===1}">
-    <a class="navbar-brand" href="#">Coffee Venture</a>
+<div id="nav" class="navbar fixed-top navbar-expand-sm pad" [ngClass]="{'affix': id ===1}">
+    <a class="navbar-brand" href="#">Coffee Venture <i class="far fa-coffee-togo"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" style="color: white;"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
