--- a/my-coffee-venture/src/app/view/user/user.component.css
+++ b/my-coffee-venture/src/app/view/user/user.component.css
@@ -5,3 +5,7 @@
     background-image: url('https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb');
     background-position: center;
 }
+
+img {
+    border-radius: 50%;
+}
