--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
@@ -95,7 +95,7 @@
                             </div>
                             <div class="p-md-6" style="padding: 1rem;">
                                 <h4 style="color: white;">{{product.name}}</h4>
-                                <span style="color: white;">{{product.journal}}</span>
+                                <span style="color: white;">{{product.content}}</span>
                                 <div class="car-buttons">
                                     <p-button type="button" styleClass="p-button p-button-rounded p-mr-2" icon="pi pi-search">
                                     </p-button>
