--- a/my-coffee-venture/src/app/home/home.component.html
+++ b/my-coffee-venture/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="app">
+<!-- <div class="app">
     <header class="header">
         <div class="grid">
             <nav class="header__navbar">
@@ -48,4 +48,93 @@
     </header>
 </div>
 
-hi
+hi -->
+<div class="first">
+
+</div>
+
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+
+    <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">WebSiteName</a>
+            </div>
+            <div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#section1">Section 1</a></li>
+                        <li><a href="#section2">Section 2</a></li>
+                        <li><a href="#section3">Section 3</a></li>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span
+                                    class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#section41">Section 4-1</a></li>
+                                <li><a href="#section42">Section 4-2</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav> -->
+    <div class="row">
+        <div class="col-lg-4">
+            <nav id="navbar-example3" class="navbar navbar-light bg-light sticky-top">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <nav class="nav nav-pills flex-column">
+                    <a class="nav-link" href="#section1">Item 1</a>
+                    <!-- <nav class="nav nav-pills flex-column">
+                        <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
+                        <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+                    </nav> -->
+                    <a class="nav-link" href="#section2">Item 2</a>
+                    <a class="nav-link" href="#section3">Item 3</a><a class="nav-link" href="#section4">Item 4</a>
+                    <a class="nav-link" href="#section4">Item 5</a><a class="nav-link" href="#section4">Item 6</a>
+                    <nav class="nav nav-pills flex-column">
+                        <a class="nav-link ms-3 my-1" href="#section41">Item 4.1</a>
+                        <a class="nav-link ms-3 my-1" href="#section42">Item 4-2</a>
+                    </nav>
+                </nav>
+            </nav>
+        </div>
+        <div class="col-lg-8">
+            <div *ngFor="let product of pics">
+                <div id="{{product.id}}" class="container-fluid" style="padding-left: 0;">
+                    <div class="row">
+                        <div class="col-md-4"><img src="assets/img/{{product.image}}" style="width: 200px;" [alt]="product.content" class="product-image" /></div>
+                        <div class="col-md-8">
+                            <h1>{{product.id | uppercase}}</h1>
+                            <p>{{product.content}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div id="section2" class="container-fluid">
+                <h1>Section 2</h1>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            </div>
+            <div id="section3" class="container-fluid">
+                <h1>Section 3</h1>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            </div>
+            <div id="section41" class="container-fluid">
+                <h1>Section 4 Submenu 1</h1>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            </div>
+            <div id="section42" class="container-fluid">
+                <h1>Section 4 Submenu 2</h1>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+                <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            </div> -->
+        </div>
+    </div>
+</body>
