--- a/my-coffee-venture/src/app/home/home.component.css
+++ b/my-coffee-venture/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-        .header {
+        /* .header {
             height: 120px;
             background-color: red;
         }
@@ -100,7 +100,6 @@
         .header__qr-download-img {
             height: 18px;
         }
-        /*Header noti*/
         
         .header__notify {
             position: absolute;
@@ -238,4 +237,59 @@
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 2;
+        } */
+        
+        body {
+            background-image: url("src\assets\img\cuc-hoa-mi.jpg");
+            /* Center and scale the image nicely */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        
+        .first {
+            height: 50vh;
+            min-height: 200px;
+            background-size: cover;
+            background-image: url('https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb');
+            background-position: center;
+        }
+        
+        body {
+            position: relative;
+        }
+        
+        #section1 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #1E88E5;
+        }
+        
+        #section2 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #673ab7;
+        }
+        
+        #section3 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #ff9800;
+        }
+        
+        #section41 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #00bcd4;
+        }
+        
+        #section42 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #009688;
         }
