--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
@@ -94,7 +94,7 @@
                                 <img src="assets/img/{{product.image}}" [alt]="product.name" class="product-image" />
                             </div>
                             <div class="p-md-6" style="padding: 1rem;">
-                                <h4 style="color: white;">{{product.name}}</h4>
+                                <h4 style="color: white;">{{product.date | date:'yyyy-MM-dd HH:mm:ss'}}</h4>
                                 <span style="color: white;">{{product.content}}</span>
                                 <div class="car-buttons">
                                     <p-button type="button" styleClass="p-button p-button-rounded p-mr-2" icon="pi pi-search">
