--- a/my-coffee-venture/src/app/view/base/base.component.html
+++ b/my-coffee-venture/src/app/view/base/base.component.html
@@ -20,7 +20,7 @@
                     <a class="dropdown-item" routerLink="/shop">Shop</a>
                     <a class="dropdown-item" routerLink="/user">User</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" routerLink="/secret">>Secret for my babibu</a>
                 </div>
             </li>
             <li class="nav-item">
