--- a/my-coffee-venture/src/app/view/home/home.component.css
+++ b/my-coffee-venture/src/app/view/home/home.component.css
@@ -1,4 +1,4 @@
-        .header {
+        /* .header {
             height: 120px;
             background-color: red;
         }
@@ -100,7 +100,6 @@
         .header__qr-download-img {
             height: 18px;
         }
-        /*Header noti*/
         
         .header__notify {
             position: absolute;
@@ -238,4 +237,291 @@
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 2;
+        } */
+        /* .header {
+            height: 120px;
+            background-color: red;
+        }
+        
+        .header__navbar {
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .header__navbar-list {
+            list-style: none;
+            padding-left: 0;
+            margin-top: 4px;
+        }
+        
+        .header__navbar-item {
+            margin: 0 8px;
+            position: relative;
+            min-height: 26px;
+        }
+        
+        .header__navbar-item-has-qr:hover .header__qr {
+            display: block;
+        }
+        
+        .header__navbar-item--has-notify:hover .header__notify {
+            display: block;
+        }
+        
+        .header__navbar-item,
+        .header__navbar-item-link {
+            display: inline-block;
+            font-size: 1.5rem;
+            color: var(--white-color);
+            text-decoration: none;
+            font-weight: 300;
+        }
+        
+        .header__navbar-item:hover,
+        .header__navbar-item-link:hover {
+            cursor: pointer;
+            color: rgba(255, 255, 255, 0.7);
+        }
+        
+        .header__navbar-item--strong {
+            font-weight: 400;
+        }
+        
+        .header__navbar-item--separate::after {
+            content: '';
+            display: block;
+            position: absolute;
+            height: 12px;
+            right: -9px;
+            top: 50%;
+            transform: translateY(-50%);
+            border-left: 1px solid #fb9086;
+        }
+        
+        .header__qr {
+            width: 186px;
+            background-color: var(--white-color);
+            position: absolute;
+            left: 0;
+            top: 118%;
+            padding: 8px;
+            border-radius: 2px;
+            display: none;
+            animation: fadeIn ease-in 0.3s;
+        }
+        
+        .header__qr::before {
+            content: "";
+            left: 0;
+            top: -16px;
+            position: absolute;
+            width: 100%;
+            height: 20px;
+            display: block;
+        }
+        
+        .header__qr-img {
+            width: 100%;
+        }
+        
+        .header__qr-apps {
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .header__qr-link:nth-child(1) {
+            margin-left: 11px;
+        }
+        
+        .header__qr-link:nth-child(2) {
+            margin-right: 11px;
+        }
+        
+        .header__qr-download-img {
+            height: 18px;
+        }
+        
+        .header__notify {
+            position: absolute;
+            top: 118%;
+            right: 0;
+            width: 404px;
+            border: 1px solid #D3D3D3;
+            background-color: var(--white-color);
+            cursor: default;
+            transform-origin: 90% top;
+            animation: headerNotifyGrowth ease-in 0.2s;
+            will-change: opacity, transform;
+            display: none;
+        }
+        
+        .header__notify::before {
+            content: "";
+            border-style: solid;
+            border-width: 20px 26px;
+            border-color: transparent transparent var(--white-color) transparent;
+            position: absolute;
+            right: 4px;
+            top: -28px;
+        }
+        
+        .header__notify::after {
+            content: "";
+            display: block;
+            position: absolute;
+            right: 0;
+            top: -16px;
+            width: 120px;
+            height: 20px;
+            background-color: red;
+            cursor: pointer;
+        }
+        
+        @keyframes headerNotifyGrowth {
+            from {
+                transform: scale(0);
+                opacity: 0;
+            }
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+        
+        .header__notify-header {
+            height: 40px;
+            background-color: var(--white-color);
+        }
+        
+        .header__notify-header h3 {
+            color: #888;
+            margin: 0 0 0 12px;
+            font-weight: 400;
+            font-size: 1.4rem;
+            cursor: text;
+            user-select: none;
+        }
+        
+        .header__notify-list {
+            padding-left: 0;
+        }
+        
+        .header__notify-item {
+            display: flex;
+            width: 100%;
+        }
+        
+        .header__notify-item:hover {
+            background-color: #f1f1f1;
+        }
+        
+        .header__notify-item--viewed {
+            background-color: rgba(238, 75, 43, 0.09);
+        }
+        
+        .header__notify-link {
+            display: flex;
+            padding: 12px;
+            width: 100%;
+            text-decoration: none;
+            background-color: rgba(238, 75, 43, 0.09);
+        }
+        
+        .header__notify-img {
+            height: 48px;
+            object-fit: contain;
+        }
+        
+        .header__notify-info {
+            margin-left: 12px;
+        }
+        
+        .header__notify-name {
+            display: block;
+            font-size: 14px;
+            color: var(--text-color);
+            font-weight: 400;
+            line-height: 1.8rem;
+            margin-top: 4px;
+        }
+        
+        .header__notify-description {
+            display: block;
+            font-size: 10px;
+            line-height: 1.6rem;
+            color: #756F6E;
+        }
+        
+        .header__notify-footer {
+            display: flex;
+        }
+        
+        .header__notify-footer-btn {
+            text-decoration: none;
+            color: var(--text-color);
+            padding: 8px 48px;
+            margin: auto;
+            font-size: 1.4rem;
+            font-weight: 400;
+        }
+        
+        .item {
+            font-size: 1.4rem;
+            font-weight: 400;
+            color: var(--text-color);
+            line-height: 1.8rem;
+            height: 3.6rem;
+            margin: 10px;
+            overflow: hidden;
+            display: block;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+        } */
+        
+        .first {
+            height: 50vh;
+            min-height: 200px;
+            background-size: cover;
+            background-image: url('https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb');
+            background-position: center;
+        }
+        
+        body {
+            position: relative;
+        }
+        
+        #section1 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #1E88E5;
+        }
+        
+        #section2 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #673ab7;
+        }
+        
+        #section3 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #ff9800;
+        }
+        
+        #section41 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #00bcd4;
+        }
+        
+        #section42 {
+            padding-top: 50px;
+            height: 500px;
+            color: #fff;
+            background-color: #009688;
         }
